[package]
name = "gos-mirror"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "Air-gapped GrapheneOS release mirror"
license = "MIT"
repository = "https://github.com/pleme-io/gos-mirror"

[[bin]]
name = "gos-mirror"
path = "src/main.rs"

[dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
